--- a/data/system/steamos-manager.service
+++ b/data/system/steamos-manager.service
@@ -2,6 +2,8 @@
 Description=SteamOS Manager Daemon
 Wants=steamos-log-submitter.service
 After=steamos-log-submitter.service
+StartLimitIntervalSec=120
+StartLimitBurst=5
 
 [Service]
 Type=notify-reload
@@ -10,6 +12,8 @@ Environment=RUST_LOG=info
 ExecStart=/usr/lib/steamos-manager -r
 Restart=on-failure
 RestartSec=1
+RestartMaxDelaySec=10
+RestartSteps=3
 
 [Install]
 WantedBy=multi-user.target
