--- a/data/user/steamos-manager.service
+++ b/data/user/steamos-manager.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=SteamOS Manager Daemon
 After=gamescope.service
+StartLimitIntervalSec=120
+StartLimitBurst=5
 
 [Service]
 Type=notify-reload
@@ -9,6 +11,8 @@ Environment=RUST_LOG=info
 ExecStart=/usr/lib/steamos-manager
 Restart=on-failure
 RestartSec=1
+RestartMaxDelaySec=10
+RestartSteps=3
 
 [Install]
 WantedBy=graphical-session.target
