--- a/data/user/com.steampowered.SteamOSManager1.service
+++ b/data/user/com.steampowered.SteamOSManager1.service
@@ -1,6 +1,5 @@
 [D-BUS Service]
 Name=com.steampowered.SteamOSManager1
-Exec=/usr/lib/steamos-manager
-User=root
+Exec=/bin/false
 SystemdService=steamos-manager.service
 
