Add a proxy changed check to CI.
If any proxy files are out of date prevent merges.
Also use git status and git diff to show what has changed if anything.
Add rust package so zbus-xmlgen can format the resulting code.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,3 +32,15 @@ clippy:
   script:
     - pacman -Sy --noconfirm --needed rust clang speech-dispatcher
     - cargo clippy
+
+proxy:
+  stage: test
+  tags:
+    - x86_64-linux-kvm-docker
+  script:
+    - pacman -Sy --noconfirm --needed rust git zbus_xmlgen
+    - cd steamos-manager-proxy/src
+    - ./update_proxy.sh
+    - git status
+    - git diff
+    - git diff-index --quiet HEAD
